Bug 1549373 - Make BrowsingContexts stay alive long enough to be detached. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D30065